[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/ui/Play.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/Pause.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/ShopIcon.png" type="Texture" id=3]
[ext_resource path="res://src/bg/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/Shop.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/ShopBackground.png" type="Texture" id=6]
[ext_resource path="res://src/player/Cat.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/ui/1980v202002.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://src/ui/clickableIcon.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/player/Globals.gd" type="Script" id=10]
[ext_resource path="res://src/ui/SmolOrange.tres" type="Theme" id=11]
[ext_resource path="res://src/ui/UI.gd" type="Script" id=12]
[ext_resource path="res://src/shop/ItemContainer.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/shop/ShopPanel.gd" type="Script" id=14]
[ext_resource path="res://assets/audio/openShopBell.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/ui/gear.png" type="Texture" id=16]
[ext_resource path="res://assets/audio/capslok__cash-register-fake.wav" type="AudioStream" id=17]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.890196, 0.231373, 0.00784314, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "play",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "pause",
"speed": 5.0
} ]

[node name="World" type="Node2D"]

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="Cat" parent="." instance=ExtResource( 7 )]
position = Vector2( 58.8657, 136.164 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="Score" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = 3.0
margin_right = -5.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.819608, 0.301961, 1 )
text = "100239"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.2092
margin_top = 12.8418
margin_right = -5.20923
margin_bottom = 25.8418
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.890196, 0.231373, 0.00784314, 1 )
text = "$13394"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.1403
margin_top = 10.1403
margin_right = -9.8597
margin_bottom = -9.85968
mouse_filter = 2
custom_constants/margin_right = 15
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Shop" type="Area2D" parent="UI/Margin"]
position = Vector2( 15, 0 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Margin/Shop"]
shape = SubResource( 3 )

[node name="Panel" type="NinePatchRect" parent="UI/Margin/Shop"]
margin_left = -22.0
margin_top = 3.0
margin_right = 92.0
margin_bottom = 166.0
texture = ExtResource( 6 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" parent="UI/Margin/Shop/Panel" instance=ExtResource( 9 )]
position = Vector2( 100.409, 13.0815 )

[node name="GridContainer" type="GridContainer" parent="UI/Margin/Shop/Panel"]
margin_left = 10.0
margin_top = 20.0
margin_right = 104.0
margin_bottom = 151.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer" parent="UI/Margin/Shop/Panel/GridContainer" instance=ExtResource( 13 )]

[node name="ItemContainer2" parent="UI/Margin/Shop/Panel/GridContainer" instance=ExtResource( 13 )]
margin_left = 24.0
margin_right = 44.0

[node name="NameTag" type="RichTextLabel" parent="UI/Margin/Shop/Panel"]
margin_left = 10.0
margin_top = 93.0
margin_right = 105.0
margin_bottom = 104.0
theme = ExtResource( 11 )
custom_colors/default_color = Color( 0.74902, 0.247059, 0.156863, 1 )
bbcode_enabled = true
bbcode_text = "Weed   $420"
text = "Weed   $420"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="UI/Margin/Shop/Panel"]
margin_left = 10.0
margin_top = 103.0
margin_right = 105.0
margin_bottom = 140.0
theme = ExtResource( 11 )
custom_colors/default_color = Color( 0.866667, 0.458824, 0.247059, 1 )
bbcode_enabled = true
bbcode_text = "A magnificent beast of wonder and beauty."
text = "A magnificent beast of wonder and beauty."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="UI/Margin/Shop/Panel"]
margin_left = 24.0
margin_top = 140.0
margin_right = 92.0
margin_bottom = 154.0
theme = ExtResource( 11 )
custom_colors/font_color = Color( 0.992157, 0.819608, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.866667, 0.458824, 0.247059, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.819608, 0.301961, 1 )
disabled = true
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI/Margin/Shop/Panel/Buy"]
stream = ExtResource( 17 )

[node name="shopSound" type="AudioStreamPlayer" parent="UI/Margin/Shop"]
stream = ExtResource( 15 )

[node name="Icon" type="AnimatedSprite" parent="UI/Margin/Shop"]
frames = SubResource( 5 )

[node name="Bank" type="Node2D" parent="UI/Margin/Shop/Icon"]
script = ExtResource( 10 )

[node name="Settings" parent="UI/Margin" instance=ExtResource( 9 )]
sound_file = "res://assets/audio/Chonk2.wav"

[node name="Icon" parent="UI/Margin/Settings" index="0"]
texture = ExtResource( 16 )

[node name="Play" type="AnimatedSprite" parent="UI/Margin"]
visible = false
frames = SubResource( 6 )
animation = "pause"

[node name="bgMusic" type="AudioStreamPlayer" parent="UI/Margin/Play"]

[connection signal="mouse_entered" from="UI/Margin/Shop" to="UI/Margin/Shop" method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="UI/Margin/Shop" to="UI/Margin/Shop" method="_on_icon_mouse_exited"]
[connection signal="icon_pressed" from="UI/Margin/Shop/Panel/Exit" to="UI/Margin/Shop" method="_on_Exit_icon_pressed"]
[connection signal="pressed" from="UI/Margin/Shop/Panel/Buy" to="UI/Margin/Shop/Panel" method="_on_BuyButton_pressed"]

[editable path="UI/Margin/Settings"]
